added functionality for add button, added minus button without finctionality, added field for desired item

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="backgroundColor">#ffd149</color>
+    <color name="statusBarColor">#c8a008</color>
 </resources>
