--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,10 +20,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
+        android:id="@+id/item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
-        android:hint="@string/amountHint"
+        android:hint="@string/itemHint"
         android:background="@null"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/money"
@@ -94,13 +95,21 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
+            android:id="@+id/buttonReset"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Reset" />
+
+        <Button
+            android:id="@+id/buttonMinus"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="minus" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/buttonPlus"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
