--- a/app/src/main/res/layout/addnewgoal.xml
+++ b/app/src/main/res/layout/addnewgoal.xml
@@ -4,54 +4,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BitrhdayActivity">
+    tools:context=".AddNewGoalActivity">
 
-    <TextView
-        android:id="@+id/textViewAge"
+    <EditText
+        android:id="@+id/edittextItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="AGE ="
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:hint="@string/itemHint"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="8dp"/>
 
-    <Button
-        android:id="@+id/buttonOpen"
+    <EditText
+        android:id="@+id/edittextCost"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Open"
+        android:layout_margin="8dp"
+        android:inputType="numberDecimal"
+        android:hint="@string/amountHint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewAge" />
+        app:layout_constraintTop_toBottomOf="@+id/edittextItem" />
 
-
-    <Button
-        android:id="@+id/buttonClose"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Close"
+        android:layout_margin="8dp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonOpen" />
+        app:layout_constraintTop_toBottomOf="@+id/edittextCost">
 
-    <Button
-        android:id="@+id/buttonInvalid"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Invalid age"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonClose" />
+        <Button
+            android:id="@+id/buttonCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginRight="4dp"
+            android:text="Cancel" />
 
-    <Button
-        android:id="@+id/buttonCancel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Cancel"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonInvalid" />
+        <Button
+            android:id="@+id/buttonOk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="4dp"
+            android:text="Ok" />
+
+
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
