created new activity for adding and decrease money it jar

--- a/app/src/main/res/layout/addnewgoal.xml
+++ b/app/src/main/res/layout/addnewgoal.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:inputType="numberDecimal"
-        android:hint="@string/amountHint"
+        android:hint="@string/targetHint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edittextItem" />
