--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,11 +58,12 @@
         android:text="0"
         android:textAlignment="center"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.091" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -88,45 +89,45 @@
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+<!--    <LinearLayout-->
+<!--        android:id="@+id/linearLayout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginBottom="8dp"-->
+<!--        android:orientation="horizontal"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent">-->
 
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:layout_weight="10"
-            android:hint="@string/amountHint"
-            android:inputType="numberDecimal" />
+<!--        <EditText-->
+<!--            android:id="@+id/editText"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_margin="8dp"-->
+<!--            android:layout_weight="10"-->
+<!--            android:hint="@string/amountHint"-->
+<!--            android:inputType="numberDecimal" />-->
 
-        <ImageView
-            android:id="@+id/buttonMinus"
-            android:layout_width="70dp"
-            android:layout_height="55dp"
-            android:layout_margin="8dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/buttonColor"
-            android:src="@drawable/ic_baseline_remove_circle_24"
-            android:text="minus" />
+<!--        <ImageView-->
+<!--            android:id="@+id/buttonMinus"-->
+<!--            android:layout_width="70dp"-->
+<!--            android:layout_height="55dp"-->
+<!--            android:layout_margin="8dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:backgroundTint="@color/buttonColor"-->
+<!--            android:src="@drawable/ic_baseline_remove_circle_24"-->
+<!--            android:text="minus" />-->
 
-        <ImageView
-            android:id="@+id/buttonPlus"
-            android:layout_width="70dp"
-            android:layout_height="55dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_baseline_add_circle_24" />
+<!--        <ImageView-->
+<!--            android:id="@+id/buttonPlus"-->
+<!--            android:layout_width="70dp"-->
+<!--            android:layout_height="55dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:layout_marginRight="8dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:src="@drawable/ic_baseline_add_circle_24" />-->
 
 
-    </LinearLayout>
+<!--    </LinearLayout>-->
 
     <TextView
         android:id="@+id/textView2"
