--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,46 +89,6 @@
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
-<!--    <LinearLayout-->
-<!--        android:id="@+id/linearLayout"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginBottom="8dp"-->
-<!--        android:orientation="horizontal"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent">-->
-
-<!--        <EditText-->
-<!--            android:id="@+id/editText"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:layout_margin="8dp"-->
-<!--            android:layout_weight="10"-->
-<!--            android:hint="@string/amountHint"-->
-<!--            android:inputType="numberDecimal" />-->
-
-<!--        <ImageView-->
-<!--            android:id="@+id/buttonMinus"-->
-<!--            android:layout_width="70dp"-->
-<!--            android:layout_height="55dp"-->
-<!--            android:layout_margin="8dp"-->
-<!--            android:layout_weight="1"-->
-<!--            android:backgroundTint="@color/buttonColor"-->
-<!--            android:src="@drawable/ic_baseline_remove_circle_24"-->
-<!--            android:text="minus" />-->
-
-<!--        <ImageView-->
-<!--            android:id="@+id/buttonPlus"-->
-<!--            android:layout_width="70dp"-->
-<!--            android:layout_height="55dp"-->
-<!--            android:layout_marginTop="8dp"-->
-<!--            android:layout_marginRight="8dp"-->
-<!--            android:layout_weight="1"-->
-<!--            android:src="@drawable/ic_baseline_add_circle_24" />-->
-
-
-<!--    </LinearLayout>-->
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -165,6 +125,14 @@
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/HintToAddNewGoalTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="194dp"
+        tools:layout_editor_absoluteY="194dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
