--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="backgroundColor">#ffd149</color>
     <color name="statusBarColor">#c8a008</color>
     <color name="buttonColor">#937200</color>
+    <color name="textColorHintToAddNewGoalTextView">#8fbdcb</color>
 </resources>
