--- a/app/src/main/res/layout/addmoneyactivity.xml
+++ b/app/src/main/res/layout/addmoneyactivity.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:hint="@string/amountHint"
+        android:maxLength="9"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
