--- a/app/src/main/res/layout/addnewgoal.xml
+++ b/app/src/main/res/layout/addnewgoal.xml
@@ -10,6 +10,7 @@
         android:id="@+id/edittextItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:maxLength="10"
         android:hint="@string/itemHint"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="8dp"/>
@@ -20,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:inputType="numberDecimal"
+        android:maxLength="9"
         android:hint="@string/targetHint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
