Process to create new design for layout

--- a/app/src/main/res/layout/addnewgoal.xml
+++ b/app/src/main/res/layout/addnewgoal.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/itemHint"
+        android:maxLength="10"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="8dp"/>
 
@@ -19,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:maxLength="9"
         android:inputType="numberDecimal"
         android:hint="@string/targetHint"
         app:layout_constraintEnd_toEndOf="parent"
