--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,6 +75,7 @@
         android:elevation="3dp"
         android:text="item"
         android:textSize="30dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/imageViewThoughts"
         app:layout_constraintStart_toStartOf="@+id/imageViewThoughts"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -184,6 +185,7 @@
         android:text="@string/mainActivityHint"
         android:textAlignment="center"
         android:textSize="17dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.489"
