--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/imageViewThoughts"
         android:layout_width="393dp"
         android:layout_height="319dp"
-        android:elevation="2dp"
+        android:elevation="3dp"
         android:src="@drawable/thoughts2"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/imageViewCharacter"
@@ -85,7 +85,7 @@
         android:elevation="2dp"
         android:text="0"
         android:textAlignment="center"
-        android:textColor="@color/textColorHintToAddNewGoalTextView"
+        android:textColor="#a5804a"
         android:textSize="30sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
@@ -93,7 +93,7 @@
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.326" />
+        app:layout_constraintVertical_bias="0.34" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -168,14 +168,13 @@
         android:layout_height="53dp"
         android:text="@string/textHintToAddNewGoalTextView"
         android:textAlignment="center"
-        android:textColor="@color/textColorHintToAddNewGoalTextView"
+        android:textColor="#a5804a"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.301" />
+        app:layout_constraintVertical_bias="0.32999998" />
 
     <TextView
         android:id="@+id/mainActivityHintTextView"
