added mcduck character

--- a/app/src/main/res/layout/change_character.xml
+++ b/app/src/main/res/layout/change_character.xml
@@ -28,6 +28,13 @@
             android:layout_marginRight="8dp"
             android:text="@string/characterNameMrKrabs" />
 
+        <RadioButton
+            android:id="@+id/mcduckButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="@string/characterNameScroogeMcDuck" />
+
     </RadioGroup>
 
     <Button
