--- a/app/src/main/res/layout/change_character.xml
+++ b/app/src/main/res/layout/change_character.xml
@@ -124,7 +124,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:layout_marginEnd="132dp"
-        android:text="Cancel"
+        android:text="@string/cancel"
         app:layout_constraintEnd_toStartOf="@+id/buttonOk"
         app:layout_constraintTop_toBottomOf="@+id/checkBoxEnableSound" />
 
